k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aces-ml
  namespace: aces-ml
  labels:
    app: aces-ml
spec:
#  type: LoadBalancer
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: aces-ml
